Fix code editor dimensions and scrolling overflow.

--- a/src/content/components/scripting-modal.scss
+++ b/src/content/components/scripting-modal.scss
@@ -5,9 +5,14 @@ spark-code-editor {
   position: relative;
   display: block;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 20px);
 }
 
 .body {
   padding: 0;
+  max-height: 100%;
+}
+
+select {
+  width: 100%;
 }
